RESULTS/AutoSpec/frama-c_mask/out/13_0002/13_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/13_0002/13_merged.c:28:9: error: unterminated comment
   28 |         /*@;
      |         ^
cc1: note: unrecognized command-line option ‘-Wno-unknown-warning-option’ may have been intended to silence earlier diagnostics
